webcleaner (2.18-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 31 May 2004 16:41:16 +0200

webcleaner (2.17-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 26 May 2004 13:48:39 +0200

webcleaner (2.16-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Sun, 23 May 2004 01:25:12 +0200

webcleaner (2.15-0.2) unstable; urgency=low

  * do not display grep result

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 May 2004 17:07:05 +0200

webcleaner (2.15-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 May 2004 16:45:19 +0200

webcleaner (2.14-0.1) unstable; urgency=low

  * New upstream release.
  * do not ask for adminpass if it is already there from a previous
    installation
  * move binaries to /usr/bin, since they could also be run by normal
    users with custom configurations
  * add linda and lintian overrides

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 May 2004 14:53:51 +0200

webcleaner (2.13-0.2) unstable; urgency=low

  * fix syntax error

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 11 May 2004 11:34:37 +0200

webcleaner (2.13-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  8 May 2004 13:59:08 +0200

webcleaner (2.12-0.1) unstable; urgency=low

  * New upstream release.

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 28 Apr 2004 21:32:53 +0200

webcleaner (2.11-0.2) unstable; urgency=low

  * remove service dir on purge
  * remove webcleaner-doc from suggests

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 28 Apr 2004 00:23:56 +0200

webcleaner (2.11-0.1) unstable; urgency=low

  * New upstream release.
  * prevent infinite loops in passwd question by unregistering empty
    passwords from the database
  * remove dh_python stuff
