@@ -1,0 +1,4 @@
+webcleaner.1
+webcleaner-ctl.1
+webcleaner-certificates.1
+webcleaner.conf.5
