@@ -1,8 +1,10 @@
 webcleaner (2.18-0.1) unstable; urgency=low
 
   * New upstream release.
+  * added webcleaner-ctl script to control the proxy daemon, removed the
+    old init.d stuff
 
- -- Bastian Kleineidam <calvin@debian.org>  Mon, 31 May 2004 16:41:16 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Mon, 31 May 2004 19:45:54 +0200
 
 webcleaner (2.17-0.1) unstable; urgency=low
 
